WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234698
[LFC][IFC] Hanging content may not be whitespace type
https://bugs.webkit.org/show_bug.cgi?id=234698
Summary
[LFC][IFC] Hanging content may not be whitespace type
alan
Reported
2021-12-26 15:59:29 PST
currently it is though. just a rename.
Attachments
Patch
(5.78 KB, patch)
2021-12-26 16:09 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.55 KB, patch)
2021-12-26 21:07 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-12-26 16:09:28 PST
Created
attachment 447993
[details]
Patch
alan
Comment 2
2021-12-26 21:07:19 PST
Created
attachment 447997
[details]
Patch
EWS
Comment 3
2021-12-28 08:53:11 PST
Committed
r287471
(
245606@main
): <
https://commits.webkit.org/245606@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 447997
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-12-28 08:54:17 PST
<
rdar://problem/86958899
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug