[LFC][IFC] Hanging content may not be whitespace type https://bugs.webkit.org/show_bug.cgi?id=234698

Reviewed by Antti Koivisto.

While we only allow whitespace hanging content, they could be any type.

* layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::horizontalAlignmentOffset):
(WebCore::Layout::LineBoxBuilder::build):
* layout/formattingContexts/inline/InlineLineBuilder.h:
* layout/formattingContexts/inline/display/InlineDisplayLineBuilder.cpp:
(WebCore::Layout::InlineDisplayLineBuilder::build const):



Canonical link: https://commits.webkit.org/245606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287471 268f45cc-cd09-0410-ab3c-d52691b4dbfc